opam-version: "2.0"
name: "satysfi-class-sdpreview"
version: "0.0.1"
synopsis: " "
description: """
"""
maintainer: "Shinichi Mogami <mogassy@yahoo.co.jp>"
authors: "Shinichi Mogami <mogassy@yahoo.co.jp>"
license: "MIT"
homepage: "https://github.com/monaqa/satysfi-class-sdpreview"
dev-repo: "git+https://github.com/monaqa/satysfi-class-sdpreview.git"
bug-reports: "https://github.com/monaqa/satysfi-class-sdpreview/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.10" & < "0.0.3" }
  "satysfi-dist"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
    "--name" "class-sdpreview"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
